Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 ---
 layout: default
 title: Uddipa Pal
@@ -28,8 +30,7 @@ I am currently in my senior year, living in Kolkata, India. This is about my jou
   - All India Rank 2 in The Ramanujan Challenge, Youthisthan Foundation
   - She-Fi Scholar with full financial aid, She-Fi and Celo                                                                                             
   - Attended the Introduction to Quantum Computing Course with full financial aid at the Coding School
-  - Distinguished Research Scholar, Commended Scorer, Honor Roll in the International Research Olympiad, Samyak Science, Harvard                                                                                                                                                                
-  - Distinction in Sir Isaac Newton Physics Exam, University of Waterloo, Department of Physics 
+  - Distinguished Research Scholar, Commended Scorer, Honor Roll in the International Research Olympiad, Samyak Science, Harvard                                                - Distinction in Sir Isaac Newton Physics Exam, University of Waterloo, Department of Physics 
   - IASC-Citizen Scientist Asteroid Search Campaign, NASA
   - Go Physics: Gravity and Blackholes Workshop (Among the only 3 students selected from India), Perimeter Institute for Theoretical Physics, Canada                     
   - 1st Rank in International Quiz and Problem-solving Challenge - Astronomy, Astro Brains
